--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/admitad?createDatabaseIfNotExi
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.sql.init.continue-on-error=true
+#spring.datasource.hikari.connection-timeout=5000
+#spring.datasource.hikari.idle-timeout=600000
+#spring.datasource.hikari.max-lifetime=1800000
+#spring.datasource.hikari.initialization-fail-timeout= -1
+
 
