--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,4 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.datasource.hikari.idle-timeout=600000
 #spring.datasource.hikari.max-lifetime=1800000
 #spring.datasource.hikari.initialization-fail-timeout= -1
-
-
+logging.level.com.example.admitad.repository=TRACE
