add mybatis 3 plus dependency to pom.xml and path for mybatis *.xml config to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.datasource.hikari.max-lifetime=1800000
 #spring.datasource.hikari.initialization-fail-timeout= -1
 logging.level.com.example.admitad.repository=TRACE
+logging.level.com.example.admitad.myBatisPlus=TRACE
+mybatis-plus.mapper-locations=classpath:mappers/*.xml
