--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,12 @@
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driverClassName=org.h2.Driver
-spring.h2.console.enabled=true
+#spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
+spring.datasource.url=jdbc:tc:mysql:8:///?TC_INITSCRIPT=schema.sql
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
+spring.datasource.username=test
+spring.datasource.password=test
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.h2.console.enabled=true
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.datasource.schema=classpath:schema.sql
+mybatis-plus.mapper-locations=classpath:mappers/*.xml
