add batch insert or update for collection of items add domain classes for linking items fix tables properties (remove not null, rename some fields) change log level for sql rename some class with prefix "Json" add org.json library to handle json, fix related issues add ServiceCollection bean to reduce injected fields in class (contains service beans)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.datasource.hikari.idle-timeout=600000
 #spring.datasource.hikari.max-lifetime=1800000
 #spring.datasource.hikari.initialization-fail-timeout= -1
-logging.level.com.example.admitad.repository=TRACE
-logging.level.com.example.admitad.myBatisPlus=TRACE
+logging.level.com.example.admitad.repository=debug
+logging.level.com.example.admitad.myBatisPlus=debug
 mybatis-plus.mapper-locations=classpath:mappers/*.xml
+logging.level.org.springframework.jdbc.core=TRACE
+logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
+
