--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,13 @@
             <version>1.16.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20211205</version>
+        </dependency>
+
 
 
     </dependencies>
